models/tests/ucl/errors/syntactic/constantliteral.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

const x : integer = 7 + 3;